<resources>
    <string name="app_name">GardenNerds</string>

    <string name="btn_title_my_garden">My Garden</string>
    <string name="btn_title_plants">Plants</string>
    <string name="btn_title_reminders">Reminders</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="msg_first_name_empty">First Name can\&apos;t be empty!</string>
    <string name="msg_last_name_empty">Last Name can\&apos;t be empty!</string>
    <string name="msg_not_valid_username">Not a valid user name!</string>
    <string name="msg_enter_alpha_numeric">Enter only AlphaNumeric!</string>
    <string name="msg_space_not_allowed">Space not allowed!</string>
    <string name="msg_password_field_cant_be_empty">Password field can\&apos;t be empty!</string>
    <string name="msg_enter_min_5characters">"Enter minimum 5 Characters"</string>
    <string name="msg_enter_valid_email">"Enter valid email"</string>
    <string name="msg_passwords_are_same">"Password entered should not match"</string>
    <string name="msg_login_failed">Login Failed! Wrong User Name or Password.</string>
    <string name="msg_signup_failed">Sign Up Failed! Please try again.</string>
    <string name="msg_signup_success">Sign Up Successful! Please Login.</string>
    <string name="msg_app_exit">Do you want to Exit App?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="request_message">Support Request Sent</string>
    <string name="about_text"> Discover about Garden Nerds, your one-stop shop for all things gardening. \n\nEstablished in 2024, we provide high-quality gardening supplies at reasonable costs. We want to make it easy for you to grow your garden with our wide selection and hassle-free buying process. \n\nBecome a member of our community now to up your gardening game!</string>
    <string name="reminders">Reminders</string>
    <string name="frequency">Frequency</string>
    <string name="type">Type</string>
    <string name="text_reminder_type_watering">Watering</string>
    <string name="text_reminder_type_fertilize">Fertilize</string>
    <string name="text_reminder_type_sunlight">Sunlight</string>
    <string name="text_reminder_type_changeSoil">Change Soil</string>

    <string name="msg_login_using_phone">Please log in using your phone.</string>
    <string name="garden_name">Garden Name</string>
    <string name="garden_description_goes_here">Garden Description goes here</string>
    <string name="sunlight_full_sunlight">Sunlight: Full Sunlight</string>
    <string name="watering_frequency_every_3_days">Watering Frequency: Every 3 days</string>
    <string name="moisture_level_50">Moisture Level: 50%</string>
    <string name="reminder">Reminder!</string>
    <string name="don_t_forget_to_water_plantname">Don\'t forget to water plantname!!!!!!!</string>
    <string name="area_0_sq_ft">Area: 0 sq ft</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_sunlight">Plant Sunlight</string>
    <string name="plant_watering">Plant Watering</string>

</resources>