<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp"
    android:layout_marginVertical="2dp"
    app:cardBackgroundColor="@color/card_color"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvName"
            android:padding="1dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:autoSizeTextType="uniform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvFrequency"
            android:padding="1dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/frequency"
            android:autoSizeTextType="uniform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="end"
            android:id="@+id/tvType"
            android:padding="1dp"
            android:autoSizePresetSizes=""
            android:layout_weight="0.5"
            android:text="@string/type"
            android:autoSizeTextType="uniform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>