<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".activity.ReminderListActivity">
    <LinearLayout
        android:orientation="vertical"
        app:boxedEdges="all"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/reminders"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvName"
                android:padding="1dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:autoSizeTextType="uniform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvFrequency"
                android:padding="1dp"
                android:layout_weight="1"
                android:text="@string/frequency"
                android:autoSizeTextType="uniform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvType"
                android:padding="1dp"
                android:autoSizePresetSizes=""
                android:layout_weight="0.5"
                android:text="@string/type"
                android:autoSizeTextType="uniform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReminders"
            tools:listitem="@layout/custom_reminder_list_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>



</androidx.wear.widget.BoxInsetLayout>