<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    tools:context=".activity.HomeActivity"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCompanyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/activity_small_margin"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/activity_small_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMyGarden"
                style="@style/Widget.MaterialComponents.Button.IconOnly"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/activity_small_margin"
                android:contentDescription="@string/btn_title_my_garden"
                app:icon="@android:drawable/ic_dialog_map"
                app:iconTint="@color/colorAccent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReminders"
                style="@style/Widget.MaterialComponents.Button.IconOnly"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/activity_small_margin"
                android:contentDescription="@string/btn_title_reminders"
                app:icon="@android:drawable/ic_popup_reminder"
                app:iconTint="@color/colorAccent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
        </LinearLayout>
    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>